<resources>
    <string name="app_name">PaydayApp</string>
    <string name="welcome">Welcome</string>
    <string name="greetingMessage">The pay app of your dreams</string>
    <string name="marketingMessage">Become a member of the future. Payday Inc.</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="companyName"><i>Company name…</i></string>
    <string name="companyCUI"><i>U.R.C…</i></string>
    <string name="makeYourAccount">Make your account:</string>
    <string name="firstName"><i>First name…</i></string>
    <string name="chooseYourDomain">Choose your domain</string>
    <string name="lastName"><i>Last name…</i></string>
    <string name="username"><i>Username…</i></string>
    <string name="legalPerson">Legal Person</string>
    <string name="naturalPerson">Natural Person</string>
    <string name="email"><i>Email…</i></string>
    <string name="password"><i>Password…</i></string>
    <string name="confirmPassword"><i>Confirm password…</i></string>
    <string name="dataProcessing1">I consent to the processing of my</string>
    <string name="dataProcessing2">personal data</string>
    <string name="signInMessage">Sign in to use our pay app:</string>
    <string name="signInButton">Sign In</string>
    <string name="alreadyMessage1">Not registered yet?</string>
    <string name="alreadyMessage2">Click</string>
    <string name="alreadyMessage3">to make an account.</string>
    <string name="clickHere"><u>here</u></string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="enterYourEmail">Enter your email</string>
    <string name="addProduct">Add a product</string>>
    <string name="send">Send</string>
    <string name="productName">Product name</string>
    <string name="price">Price</string>
    <string name="barcode">Barecode</string>
    <string name="scan">Scan</string>>
    <string name="edit">Edit</string>>
    <string name="delete">Delete</string>>
    <string name="add">Add</string>>
    <string name="newName">New name(required only for edit)</string>>
    <string name="forgotMessage">Enter your email below to send your password.</string>
    <string name="pay_invoice">Pay Invoice</string>
    <string name="name_on_card">Name on card</string>
    <string name="expiry_date_mm_yy">Expiry date(MM/YY)</string>
    <string name="security_code">Security Code</string>
    <string name="log_out">LOG OUT</string>
</resources>