<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterYourEmailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="290dp"
        android:layout_height="74dp"
        android:hint="@string/enterYourEmail"
        android:textColorHint="#253A4B"
        app:boxStrokeColor="@color/input_layout_stroke_color"
        app:counterTextColor="@color/darkBlueGrey"
        app:errorEnabled="true"
        app:hintTextColor="#253A4B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterYourEmailText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:editable="true"
            android:elegantTextHeight="true"
            android:fontFamily="@font/segoe_ui_light"
            android:keepScreenOn="false"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:singleLine="false"
            android:textColor="#253A4B"
            android:textColorHint="#253A4B"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="259dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/purpleRed"
        android:fontFamily="@font/segoe_ui_light"
        android:text="@string/send"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.606" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_display_thin"
        android:text="@string/forgotPassword"
        android:textColor="#131313"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_display_thin"
        android:text="@string/forgotMessage"
        android:textColor="#131313"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

</androidx.constraintlayout.widget.ConstraintLayout>