<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductsActivity">

    <TextView
        android:id="@+id/addProductText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="159dp"
        android:height="33dp"
        android:fontFamily="@font/segoe_ui_light"
        android:text="@string/addProduct"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/productNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="363dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="32dp"
        android:windowSoftInputMode="adjustPan"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/input_layout_stroke_color"
        app:counterEnabled="true"
        app:counterTextColor="@color/darkBlueGrey"
        app:errorEnabled="true"
        app:hintTextColor="#253A4B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/productNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:editable="true"
            android:elegantTextHeight="true"
            android:fontFamily="@font/segoe_ui_light"
            android:hint="@string/productName"
            android:keepScreenOn="false"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:singleLine="false"
            android:textColor="#253A4B"
            android:textColorHint="#253A4B"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="16sp"
            app:hintTextColor="#253A4B"
            tools:ignore="Deprecated" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/productPriceLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="363dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="32dp"
        android:windowSoftInputMode="adjustPan"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/input_layout_stroke_color"
        app:counterEnabled="true"
        app:counterTextColor="@color/darkBlueGrey"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47000003">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/productPriceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:editable="true"
            android:elegantTextHeight="true"
            android:fontFamily="@font/segoe_ui_light"
            android:hint="@string/price"
            android:keepScreenOn="false"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:singleLine="false"
            android:textColor="#253A4B"
            android:textColorHint="#253A4B"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="16sp"
            tools:ignore="Deprecated" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/productBarcodeLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="363dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="32dp"
        android:windowSoftInputMode="adjustPan"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/input_layout_stroke_color"
        app:counterEnabled="true"
        app:counterTextColor="@color/darkBlueGrey"
        app:errorEnabled="true"
        app:hintTextColor="#253A4B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58000004">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/productBarcodeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:editable="true"
            android:elegantTextHeight="true"
            android:fontFamily="@font/segoe_ui_light"
            android:hint="@string/barcode"
            android:keepScreenOn="false"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:singleLine="false"
            android:textColor="#253A4B"
            android:textColorHint="#253A4B"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="16sp"
            tools:ignore="Deprecated" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#03ac13"
        android:fontFamily="@font/segoe_ui_light"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#f2bb66"
        android:fontFamily="@font/segoe_ui_light"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#e3242b"
        android:fontFamily="@font/segoe_ui_light"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purpleRed"
        android:fontFamily="@font/segoe_ui_light"
        android:text="@string/scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

    <ImageView
        android:id="@+id/header"
        android:layout_width="502dp"
        android:layout_height="130dp"
        android:layout_marginBottom="608dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/header_add_products" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="369dp"
        android:height="33dp"
        android:fontFamily="@font/segoe_ui_light"
        android:text=""
        android:textColor="#000000"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689" />

</androidx.constraintlayout.widget.ConstraintLayout>